fixed zipcode alignment issues

--- a/src/main.less
+++ b/src/main.less
@@ -545,17 +545,6 @@ li {
 
 //736
 @media only screen and (min-width: 736px) {
-  .form-control {
-    margin-left: 53px;
-    width: 75% !important;
-  }
-
-  .banner-zip-search {
-    input {
-      padding-left: 41%;
-    }
-  }
-
   .modal-open {
     .modal {
       overflow-x: hidden;
@@ -567,13 +556,6 @@ li {
   .modal {
     top: 14% !important;
   }
-
-  .banner-zip-search {
-    .error {
-      margin-right: 105px !important;
-    }
-  }
-
 }
 
 //414
@@ -585,17 +567,6 @@ li {
 
 //640
 @media only screen and (min-width: 640px) {
-  .form-control {
-    margin-left: 40px;
-    width: 75% !important;
-  }
-
-  .banner-zip-search {
-    input {
-      padding-left: 39%;
-    }
-  }
-
   .modal {
     top: 15.5% !important;
   }
@@ -611,13 +582,6 @@ li {
   .modal {
     top: 15% !important;
   }
-
-  .banner-zip-search {
-    .error {
-      margin-right: 84px;
-    }
-  }
-
 }
 
 //360
@@ -688,17 +652,6 @@ li {
 }
 
 @media only screen and (min-width: 568px) {
-  .form-control {
-    margin-left: 30px;
-    width: 80% !important;
-  }
-
-  .banner-zip-search {
-    input {
-      padding-left: 39%;
-    }
-  }
-
   .col-xs-10 {
     width: 91.66666667% !important;
   }
